fichiers base testgeolocalisation

--- a/branches/testgeo/index.html
+++ b/branches/testgeo/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-<meta charset="utf-8">
-<title>HTML</title>
-<meta name="viewport" content="width=device-width">
-<link rel="shortcut icon" href="">
-</head>
-<body>
-<div>
-<header>
-</header>
-<nav>
-</nav>
-<footer>
-</footer>
-</div>
-</body>
+	<head>
+		<meta charset="utf-8">
+		<title>HTML</title>
+		<meta name="viewport" content="width=device-width">
+		<link type="text/css" rel="stylesheet" href="stylegeo.css" />
+		<link rel="shortcut icon" href="">
+	</head>
+	<body>
+		<header>
+		</header>
+		<nav>
+		</nav>
+		<section class="testgeo">
+		</section>
+		<section class="testgeo">
+		</section>
+		<section class="testgeo">
+		</section>
+		<footer>
+		</footer>
+	</body>
 </html>
