ajout de map de base

--- a/branches/testgeo/index.html
+++ b/branches/testgeo/index.html
@@ -5,19 +5,37 @@
 		<title>HTML</title>
 		<meta name="viewport" content="width=device-width">
 		<link type="text/css" rel="stylesheet" href="stylegeo.css" />
-		<link rel="shortcut icon" href="">
+		<link rel="shortcut icon" href="" />
+		<style type="text/css">
+			html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
+		</style>
+		<script type="text/javascript"
+		  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRJbVvxUGgVYjP-GCsHv1tKY9W3fHbO1A">
+		</script>
+		
+		<script type="text/javascript">
+		  function initialize() {
+			var mapOptions = {
+			  center: { lat: -34.397, lng: 150.644},
+			  zoom: 8
+			};
+			var map = new google.maps.Map(document.getElementById('map-canvas'),
+				mapOptions);
+		  }
+		  google.maps.event.addDomListener(window, 'load', initialize);
+		</script>
+
+
 	</head>
 	<body>
 		<header>
 		</header>
 		<nav>
 		</nav>
-		<section class="testgeo">
-		</section>
-		<section class="testgeo">
-		</section>
-		<section class="testgeo">
-		</section>
+		<div id="map-canvas">
+		
+		</div>
+
 		<footer>
 		</footer>
 	</body>
