--- a/branches/testben/index.html
+++ b/branches/testben/index.html
@@ -30,7 +30,7 @@
 		  fillOpacity: 0.35,
 		  map: map,
 		  center: new google.maps.LatLng(34.052234, -118.243684),
-		  radius:  10,
+		  radius:  500
 		  };
 		  cityCircle = new google.maps.Circle(populationOptions);
 		  google.maps.event.addDomListener(window, 'load', initialize);
