ajout branche/testben

--- a/branches/testben/index.html
+++ b/branches/testben/index.html
@@ -29,7 +29,7 @@
 		  fillOpacity: 0.35,
 		  map: map,
 		  center: new google.maps.LatLng(34.052234, -118.243684),
-		  radius:  500
+		  radius:  5000000
 		  };
 		  cityCircle = new google.maps.Circle(populationOptions);
 		  }
