--- a/branches/testben/index.html
+++ b/branches/testben/index.html
@@ -21,7 +21,7 @@
 			};
 			var map = new google.maps.Map(document.getElementById('map-canvas'),
 				mapOptions);
-		  var populationOptions = {
+		  var test1 = {
 		  strokeColor: '#FF0000',
 		  strokeOpacity: 0.8,
 		  strokeWeight: 2,
@@ -29,9 +29,20 @@
 		  fillOpacity: 0.35,
 		  map: map,
 		  center: new google.maps.LatLng(34.052234, -118.243684),
-		  radius:  5000000
+		  radius:  500000
 		  };
-		  cityCircle = new google.maps.Circle(populationOptions);
+		  var test2 = {
+		  strokeColor: '#00FF00',
+		  strokeOpacity: 0.8,
+		  strokeWeight: 2,
+		  fillColor: '#FF0000',
+		  fillOpacity: 0.35,
+		  map: map,
+		  center: new google.maps.LatLng(30.052234, -110.243684),
+		  radius:  500000
+		  };
+		  cityCircle = new google.maps.Circle(test1);
+		  cityCircle = new google.maps.Circle(test2);
 		  }
 		  google.maps.event.addDomListener(window, 'load', initialize);
 		</script>
