--- a/branches/testben/index.html
+++ b/branches/testben/index.html
@@ -35,7 +35,7 @@
 		  strokeColor: '#00FF00',
 		  strokeOpacity: 0.8,
 		  strokeWeight: 2,
-		  fillColor: '#FF0000',
+		  fillColor: '#00FF00',
 		  fillOpacity: 0.35,
 		  map: map,
 		  center: new google.maps.LatLng(30.052234, -110.243684),
