--- a/branches/testben/index.html
+++ b/branches/testben/index.html
@@ -41,8 +41,25 @@
 		  center: new google.maps.LatLng(30.052234, -110.243684),
 		  radius:  500000
 		  };
-		  cityCircle = new google.maps.Circle(test1);
-		  cityCircle = new google.maps.Circle(test2);
+		  circletest1 = new google.maps.Circle(test1);
+		  circletest2 = new google.maps.Circle(test2);
+
+		  var contentString = '<div id="content">'+
+		    '<div id="siteNotice">'+
+		      '</div>'+
+		    '<h1 id="firstHeading" class="firstHeading">TESTESTEST</h1>'+
+		    '<div id="bodyContent">'+
+		      '<p><b>Uluru</b>, TEST</p>'+
+		      '<p>Attribution: Uluru, <a href="http://en.wikipedia.org/w/index.php?title=Uluru&oldid=297882194">'+
+		      '</div>'+
+		    '</div>';
+
+		  var infowindow = new google.maps.InfoWindow({
+		  content: contentString
+		  });
+		  google.maps.event.addListener(circletest1, 'click', function() {
+		  infowindow.open(map,marker);
+		  });
 		  }
 		  google.maps.event.addDomListener(window, 'load', initialize);
 		</script>
