--- a/branches/testben/index.html
+++ b/branches/testben/index.html
@@ -58,7 +58,7 @@
 		  content: contentString
 		  });
 		  google.maps.event.addListener(circletest1, 'click', function() {
-		  infowindow.open(map,marker);
+		  infowindow.open(map,circletest1);
 		  });
 		  }
 		  google.maps.event.addDomListener(window, 'load', initialize);
