ajout branche/testben

--- a/branches/testben/index.html
+++ b/branches/testben/index.html
@@ -65,6 +65,7 @@
 		  var styles = [
 		  {
 		  featureType: "road",
+		  elementType: "geometry",
 		  stylers: [
 		  { visibility: "simplified" }
 		  ]
