--- a/branches/integration/baseSite/index.html
+++ b/branches/integration/baseSite/index.html
@@ -12,13 +12,19 @@
      <nav class="top-bar" data-topbar>
        <ul class="title-area">
          <li class="name">
-           <h1><a href="#">Something</a></h1>
+           <h1><a href="#">HumanMap</a></h1>
          </li>
          <li class="toggle-topbar menu-icon"><a href="#">Menu</a></li>
        </ul>
    
      <section class="top-bar-section">
-       <!-- Right Nav Section -->
+       <ul class="left">
+         <li><a href="#">Accueil</a></li>
+         <li><a href="#">Position actuelle</a></li>
+         <li><a href="#">Continents</a></li>
+         <li><a href="#">FAQ</a></li>
+       </ul>
+
        <ul class="right">
          <li class="active"><a href="#">Right Nav Button Active</a></li>
          <li class="has-dropdown">
@@ -30,17 +36,9 @@
        </ul>
    
        <!-- Left Nav Section -->
-       <ul class="left">
-         <li><a href="#">Left Nav Button</a></li>
-       </ul>
+
      </section>
    </nav>
-
-    <div class="row panel">
-      <div class="large-12 columns">
-      
-        <h1>Welcome to Foundation</h1>
-      </div>
       
     </div>
     <div class="row">
