--- a/branches/integration/baseSite/index.html
+++ b/branches/integration/baseSite/index.html
@@ -48,7 +48,7 @@
     <div class="row">
       <div class="small-24 medium-20 large-10 columns medium-centered large-uncentered panel"></div>
       </div>
-
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/foundation/js/foundation.min.js"></script>
     <script src="js/app.js"></script>
