--- a/branches/integration/baseSite/index.html
+++ b/branches/integration/baseSite/index.html
@@ -24,11 +24,11 @@
          <li><a href="#">Position actuelle</a></li>
          <li class="has-dropdown"><a href="#">Continents</a>
             <ul class="dropdown">
-              <li><a href="#">Afrique</a></li>
-              <li><a href="#">Europe</a></li>
-              <li><a href="#">Amérique</a></li>
-              <li><a href="#">Asie</a></li>
-              <li><a href="#">Océanie</a></li>
+              <li id="afrique"><a href="#">Afrique</a></li>
+              <li id="europe"><a href="#">Europe</a></li>
+              <li id="amerique"><a href="#">Amérique</a></li>
+              <li id="asie"><a href="#">Asie</a></li>
+              <li id="oceanie"><a href="#">Océanie</a></li>
             </ul>
          </li>
          <li><a href="#">FAQ</a></li>
