--- a/branches/integration/baseSite/index.html
+++ b/branches/integration/baseSite/index.html
@@ -46,7 +46,7 @@
        </div>
        <div id="map-canvas"></div>
     <div class="row">
-      <div class="small-24 medium-20 large-10 columns medium-centered large-uncentered panel"></div>
+      <div id="content" class="small-24 medium-20 large-10 columns medium-centered large-uncentered panel"></div>
       </div>
     <script type="text/javascript" src="http://maps.google.com/maps/api/js"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
