position actuelle geolocalisation onclick

--- a/branches/integration/baseSite/index.html
+++ b/branches/integration/baseSite/index.html
@@ -21,7 +21,7 @@
      <section class="top-bar-section">
        <ul class="left">
          <li><a href="#">Accueil</a></li>
-         <li><a href="#">Position actuelle</a></li>
+         <li id="current"><a href="#">Position actuelle</a></li>
          <li class="has-dropdown"><a href="#">Continents</a>
             <ul class="dropdown">
               <li id="afrique"><a href="#">Afrique</a></li>
