--- a/branches/testgeo/index.html
+++ b/branches/testgeo/index.html
@@ -10,65 +10,104 @@
 			html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
 		</style>
 		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
-    <script>
+    <script type="text/javascript">
 		var map;
+		var directionDisplay;
+		var direction = new google.maps.DirectionsService();
 
 function initialize() {
+
+	directionDisplay = new google.maps.DirectionsRenderer();
+	//option de base de la map
   var mapOptions = {
-    zoom: 6
+    maxZoom: 12,
+	minZoom: 6,
+	zoom: 6,
+	keyboardShorcuts: true,
+	panControl: true,
+	scrollwheel: true,
+	streetViewControl: false,
+	mapTypeId: "hybrid",
   };
   map = new google.maps.Map(document.getElementById('map-canvas'),
       mapOptions);
 	
-	
-
+//------------------------------GEOLOCALISATION-------------------------
 
   // Try HTML5 geolocation
   if(navigator.geolocation) {
-    navigator.geolocation.getCurrentPosition(function(position) {
-      var pos = new google.maps.LatLng(position.coords.latitude,
-                                       position.coords.longitude);
+		navigator.geolocation.getCurrentPosition(function(position) {
+		  var pos = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
+		 // var pos = new google.maps.LatLng(50, 50);
 
-      var infowindow = new google.maps.InfoWindow({
-        map: map,
-        position: pos,
-        content: '{'+position.coords.latitude+','+position.coords.longitude+'}'
-      });
-	  
-	  var marker = new google.maps.Marker({
-      position: pos,
-      map: map,
-      title: 'Hello World!'
-  });
+		  var infowindow = new google.maps.InfoWindow({
+			map: map,
+			position: pos,
+			content: '{'+position.coords.latitude+','+position.coords.longitude+'}'
+		  });
+		  
+		  var marker = new google.maps.Marker({
+		  position: pos,
+		  map: map,
+		  title: 'Hello World!'
+	  });
+		
+			var marker2 = new google.maps.Marker({
+		  position: new google.maps.LatLng(40, 66),
+		  map: map,
+		  title: 'Hello World!'
+	  });
 
-      map.setCenter(pos);
-    }, function() {
-      handleNoGeolocation(true);
-    });
+		  map.setCenter(pos);
+		}, function() {
+		  handleNoGeolocation(true);
+		});
   } else {
     // Browser doesn't support Geolocation
     handleNoGeolocation(false);
   }
-}
+  
+  function handleNoGeolocation(errorFlag) {
+	  if (errorFlag) {
+		var content = 'Error: The Geolocation service failed.';
+	  } else {
+		var content = 'Error: Your browser doesn\'t support geolocation.';
+	  }
 
-function handleNoGeolocation(errorFlag) {
-  if (errorFlag) {
-    var content = 'Error: The Geolocation service failed.';
-  } else {
-    var content = 'Error: Your browser doesn\'t support geolocation.';
-  }
+	  var options = {
+		map: map,
+		position: new google.maps.LatLng(60, 105),
+		content: content
+	  };
 
-  var options = {
-    map: map,
-    position: new google.maps.LatLng(60, 105),
-    content: content
+	  var infowindow = new google.maps.InfoWindow(options);
+	  map.setCenter(options.position);
+	}
+
+  directionDisplay.setMap(map);
+
+var request = {
+      origin:pos,
+      destination: new google.maps.LatLng(40, 66),
+      travelMode: google.maps.TravelMode.WALKING
   };
-
-  var infowindow = new google.maps.InfoWindow(options);
-  map.setCenter(options.position);
+  direction.route(request, function(response, status) {
+    if (status == google.maps.DirectionsStatus.OK) {
+      directionsDisplay.setDirections(response);
+    }
+  });
 }
+
+
+
+
+//------------------------------FIN GEOLOCALISATION-------------------------
+
+//------------------------------LOAD MAP-----------------------------------
 
 google.maps.event.addDomListener(window, 'load', initialize);
+
+//------------------------------FIN LOAD MAP-------------------------------
 
     </script>
 
