--- a/branches/integration/baseSite/index.html
+++ b/branches/integration/baseSite/index.html
@@ -46,7 +46,18 @@
        </div>
        <div id="map-canvas"></div>
     <div class="row">
-      <div id="content" class="small-24 medium-20 large-10 columns medium-centered large-uncentered panel"></div>
+      <div id="content" class="small-24 medium-20 large-10 columns medium-centered large-uncentered panel">
+      	<p><b>Uluru</b>, also referred to as <b>Ayers Rock</b>, is a large ' +
+     	 'sandstone rock formation in the southern part of the '+
+      	'Northern Territory, central Australia. It lies 335km (208mi) '+
+     	 'south west of the nearest large town, Alice Springs; 450km '+
+     	 '(280mi) by road. Kata Tjuta and Uluru are the two major '+
+      	'features of the Uluru - Kata Tjuta National Park. Uluru is '+
+      	'sacred to the Pitjantjatjara and Yankunytjatjara, the '+
+      	'Aboriginal people of the area. It has many springs, waterholes, '+
+      	'rock caves and ancient paintings. Uluru is listed as a World '+
+     	 'Heritage Site.</p>
+      </div>
       </div>
     <script type="text/javascript" src="http://maps.google.com/maps/api/js"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
