--- a/branches/integration/baseSite/index.html
+++ b/branches/integration/baseSite/index.html
@@ -63,6 +63,7 @@
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/foundation/js/foundation.min.js"></script>
     <script src="js/app.js"></script>
+    <script src="script/data.js"></script>
     <script src="js/map.js"></script>
   </body>
 </html>
