--- a/trunk/index.html
+++ b/trunk/index.html
@@ -21,7 +21,7 @@
      <section class="top-bar-section">
        <ul class="left">
          <li><a href="#">Accueil</a></li>
-         <li><a href="#">Position actuelle</a></li>
+         <li id="current"><a href="#">Position actuelle</a></li>
          <li class="has-dropdown"><a href="#">Continents</a>
             <ul class="dropdown">
               <li id="afrique"><a href="#">Afrique</a></li>
@@ -46,12 +46,23 @@
        </div>
        <div id="map-canvas"></div>
     <div class="row">
-      <div class="small-24 medium-20 large-10 columns medium-centered large-uncentered panel"></div>
+      <div id="content" class="small-24 medium-20 large-10 columns medium-centered large-uncentered panel">
+      	<p><b>Uluru</b>, also referred to as <b>Ayers Rock</b>, is a large ' +
+     	 'sandstone rock formation in the southern part of the '+
+      	'Northern Territory, central Australia. It lies 335km (208mi) '+
+     	 'south west of the nearest large town, Alice Springs; 450km '+
+     	 '(280mi) by road. Kata Tjuta and Uluru are the two major '+
+      	'features of the Uluru - Kata Tjuta National Park. Uluru is '+
+      	'sacred to the Pitjantjatjara and Yankunytjatjara, the '+
+      	'Aboriginal people of the area. It has many springs, waterholes, '+
+      	'rock caves and ancient paintings. Uluru is listed as a World '+
+     	 'Heritage Site.</p>
       </div>
-    <script type="text/javascript" src="http://maps.google.com/maps/api/js"></script>
+      </div>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/foundation/js/foundation.min.js"></script>
     <script src="js/app.js"></script>
+    <script src="script/data.js"></script>
     <script src="js/map.js"></script>
   </body>
 </html>
