--- a/branches/integration/baseSite/index.html
+++ b/branches/integration/baseSite/index.html
@@ -20,9 +20,8 @@
    
      <section class="top-bar-section">
        <ul class="left">
-         <li><a href="#">Accueil</a></li>
-         <li id="current"><a href="#">Position actuelle</a></li>
-         <li class="has-dropdown"><a href="#">Continents</a>
+         <li id="position"><a href="#">Position actuelle</a></li>
+         <li id="continents" class="has-dropdown"><a href="#">Continents</a>
             <ul class="dropdown">
               <li id="afrique"><a href="#">Afrique</a></li>
               <li id="europe"><a href="#">Europe</a></li>
@@ -31,7 +30,7 @@
               <li id="oceanie"><a href="#">Océanie</a></li>
             </ul>
          </li>
-         <li><a href="#">FAQ</a></li>
+         <li id="faq"><a href="#">A propos</a></li>
        </ul>
 
        <ul class="right">
@@ -46,22 +45,34 @@
        </div>
        <div id="map-canvas"></div>
     <div class="row">
-      <div id="content" class="small-24 medium-20 large-10 columns medium-centered large-uncentered panel">
-      	<p><b>Uluru</b>, also referred to as <b>Ayers Rock</b>, is a large ' +
-     	 'sandstone rock formation in the southern part of the '+
-      	'Northern Territory, central Australia. It lies 335km (208mi) '+
-     	 'south west of the nearest large town, Alice Springs; 450km '+
-     	 '(280mi) by road. Kata Tjuta and Uluru are the two major '+
-      	'features of the Uluru - Kata Tjuta National Park. Uluru is '+
-      	'sacred to the Pitjantjatjara and Yankunytjatjara, the '+
-      	'Aboriginal people of the area. It has many springs, waterholes, '+
-      	'rock caves and ancient paintings. Uluru is listed as a World '+
-     	 'Heritage Site.</p>
+      <div id="content" class="small-24 medium-20 large-10 columns medium-centered large-uncentered panel"></div>
       </div>
-      </div>
+    <!-- ******************* JOYRIDE ********************************* -->
+      <!-- At the bottom of your page but inside of the body tag -->
+        <ol class="joyride-list" data-joyride>
+          <li data-text="Suivant" data-options="prev_button: false">
+            <p>Bienvenue sur HumanMap</p>
+          </li>
+          <li data-id="position" data-class="custom so-awesome" data-text="Suivant" data-prev-text="Precedent">
+            <p>Vous pouvez accéder à votre position en cliquant sur ce lien</p>
+          </li>
+          <li data-id="continents" data-button="Suivant" data-prev-text="Precedent" data-options="tip_location:top;tip_animation:fade">
+            <p>Rendez-vous sur chaque continent pour accéder à plus d'informations</p>
+          </li>
+          <li data-id="faq" data-button="Fin" data-prev-text="Precedent">
+            <p>A vous !</p>
+          </li>
+        </ol>
+    <!-- ******************* SCRIPTS ********************************* -->
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/foundation/js/foundation.min.js"></script>
+    <script src="bower_components/foundation/js/foundation/foundation.joyride.js"></script>
+    <script src="bower_components/jquery.cookie/jquery.cookie.js"></script>
     <script src="js/app.js"></script>
     <script src="js/map.js"></script>
+    <script>
+    $(document).foundation('joyride', 'start');
+  </script>
   </body>
 </html>
