--- a/branches/integration/baseSite/index.html
+++ b/branches/integration/baseSite/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation</title>
+    <title>Human Map</title>
     <link rel="stylesheet" href="stylesheets/app.css" />
     <link rel="stylesheet" href="stylesheets/modif.css">
     <script src="bower_components/modernizr/modernizr.js"></script>
@@ -30,7 +30,7 @@
               <li id="oceanie"><a href="#">Océanie</a></li>
             </ul>
          </li>
-         <li id="faq"><a href="#">A propos</a></li>
+         <li id="faq"><a href="apropos.html">A propos</a></li>
        </ul>
 
        <ul class="right">
@@ -70,10 +70,12 @@
     <script src="bower_components/foundation/js/foundation/foundation.joyride.js"></script>
     <script src="bower_components/jquery.cookie/jquery.cookie.js"></script>
     <script src="js/app.js"></script>
-    <script src="script/data.js"></script>
     <script src="js/map.js"></script>
     <script>
-    $(document).foundation('joyride', 'start');
+    if (window.matchMedia("(min-width: 600px)").matches) {
+  $(document).foundation('joyride', 'start');
+}
+    
   </script>
   </body>
 </html>
