--- a/trunk/apropos.html
+++ b/trunk/apropos.html
@@ -35,8 +35,21 @@
     <div class="row">
       <div class="panel large-24 columns">
         <h1>A propos</h1>
-        <h3>Pourquoi HumanMap ?</h3>
-        <p>Parce qu'on avais besoin de trouver un site à faire pour la nuit de l'info ! :)</p>
+        <h4>Evènement : Nuit de l'info 2014 - Bordeaux</h4>
+        <h4>Equipe :</h4>
+        <ul>
+          <li>Chusseau Camille</li>
+          <li>Do Michel</li>
+          <li>Dufour Mathieu</li>
+          <li>Dumonet Thomas</li>
+          <li>Henner Enguerran</li>
+          <li>Labrousse Thomas</li>
+          <li>Millerioux Nicolas</li>
+          <li>Nunez Lopez Julian</li>
+          <li>Pousin Pierre</li>
+          <li>Thibault Benjamin</li>
+        </ul>
+        <p>Tous droits réservés &copy; Equipe Padawins 1</p>
       </div>
     </div>
     <!-- ******************* SCRIPTS ********************************* -->
