--- a/trunk/apropos.html
+++ b/trunk/apropos.html
@@ -6,6 +6,7 @@
     <title>A propos</title>
     <link rel="stylesheet" href="stylesheets/app.css" />
     <link rel="stylesheet" href="stylesheets/modif.css">
+    <link rel="icon" href="favicon.ico" />
     <script src="bower_components/modernizr/modernizr.js"></script>
   </head>
   <body>
