--- a/trunk/index.html
+++ b/trunk/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Human Map</title>
     <link rel="stylesheet" href="stylesheets/app.css" />
-    <link rel="stylesheet" href="stylesheets/modif.css">
+    <link rel="stylesheet" href="stylesheets/modif.css" />
+    <link rel="icon" href="favicon.ico" />
     <script src="bower_components/modernizr/modernizr.js"></script>
   </head>
   <body>
